java/java-tests/testData/codeInsight/daemonCodeAnalyzer/missingJavadoc/moduleInfo/requiredTags/module-info.java
<error descr="Module declaration should be located in a module's source root">module <warning descr="Required Javadoc is absent">Enabled</warning></error> { }